--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -14,7 +14,7 @@ author_profile: true
 
 <div>
 
-  **NTUA Thomaidion Award** for the publication "A paradigm shift toward satisfaction, realism and efficiency in wireless networks resource sharing," (May 2022).
+ <b> NTUA Thomaidion Award** for the publication </b> "A paradigm shift toward satisfaction, realism and efficiency in wireless networks resource sharing," (May 2022).
 
     
 **A.G. Leventis Foundation Scholarship** for graduate studies in Electrical Engineering (2021-2023).
