--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,17 +8,21 @@ author_profile: true
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
+<!-- {% for post in site.portfolio %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
 
 <div>
 
- <b> NTUA Thomaidion Award** for the publication </b> "A paradigm shift toward satisfaction, realism and efficiency in wireless networks resource sharing," (May 2022).
+ <b> NTUA Thomaidion Award</b> for the publication "A paradigm shift toward satisfaction, realism and efficiency in wireless networks resource sharing," (May 2022).
 
-    
-**A.G. Leventis Foundation Scholarship** for graduate studies in Electrical Engineering (2021-2023).
+</div>
+  
+<div>
+  
+<b> A.G. Leventis Foundation Scholarship </b> for graduate studies in Electrical Engineering (2021-2023).
 
+</div>
 
 **Bodossaki Foundation Scholarship** for graduate studies in Electrical Engineering (2021-2022).
       
