--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -17,15 +17,19 @@ author_profile: true
  <b> NTUA Thomaidion Award</b> for the publication "A paradigm shift toward satisfaction, realism and efficiency in wireless networks resource sharing," (May 2022).
 
 </div>
-  
+<br>
 <div>
   
 <b> A.G. Leventis Foundation Scholarship </b> for graduate studies in Electrical Engineering (2021-2023).
 
 </div>
+<br>
 
-**Bodossaki Foundation Scholarship** for graduate studies in Electrical Engineering (2021-2022).
-      
+<div>
+<b>Bodossaki Foundation Scholarship</b> for graduate studies in Electrical Engineering (2021-2022).
+</div> 
+<br>
+
 
 **Gerondelis Foundation Award** for Academic Excellence (2020-2021).
 
