--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -30,24 +30,28 @@ author_profile: true
 </div> 
 <br>
 
+<div>
+<b>Gerondelis Foundation Award</b> for Academic Excellence (2020-2021).
+</div>
+<br>
 
-**Gerondelis Foundation Award** for Academic Excellence (2020-2021).
-
-
-**NTUA Thomaidion Award** for the publication "Redesigning Resource Management in Wireless Networks based on Games in Satisfaction Form," (Sept. 2021).
-
-    
-**Special Account for Research Funding (E.L.K.E.) of NTUA Scholarship** for Academic Excellence (2019-2020).
-
-    
-
-**Space Hellas "Dimitris Manolopoulos" Scholarship** for Academic Excellence (Dec. 2019).
-
-
-**Best Paper Award** in the 12th IFIP Wireless and Mobile Networking Conference (WMNC '19) for the paper "Redesigning Resource Management in Wireless Networks based on Games in Satisfaction Form," (Sept. 2019).
-
+<div>
+<b>NTUA Thomaidion Award</b> for the publication "Redesigning Resource Management in Wireless Networks based on Games in Satisfaction Form," (Sept. 2021).
+</div>
+<br> 
+<div>
+<b>Special Account for Research Funding (E.L.K.E.) of NTUA Scholarship</b> for Academic Excellence (2019-2020).
+</div>
+<br>    
+<div>
+<b>Space Hellas "Dimitris Manolopoulos" Scholarship</b> for Academic Excellence (Dec. 2019).
+</div>
+<br>
+<div>
+<b>Best Paper Award</b> in the 12th IFIP Wireless and Mobile Networking Conference (WMNC '19) for the paper "Redesigning Resource Management in Wireless Networks based on Games in Satisfaction Form," (Sept. 2019).
+</div>
 
 
   
-</div>
+
 
