--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -7,6 +7,9 @@ author_profile: true
 
 {% include base_path %}
 
+p {
+    padding-bottom: 3cm;
+}
 
 <!-- {% for post in site.portfolio %}
   {% include archive-single.html %}
