--- a/_pages/quantum-detail.html
+++ b/_pages/quantum-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog-Z Photo Detail Page</title>
+    <title>Quantum Networks</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -39,7 +39,7 @@ https://templatemo.com/tm-556-catalog-z
         </div>
        
        
-        <div class="row mb-3 tm-gallery">
+        <div class="row mb-3 tm-gallery" style="margin-left:1cm;margin-right:1cm;">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
