--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -29,7 +29,7 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     
 
-    <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="img/QuantumProcessor.jpg">
+    <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="img/mmwavenetworks.jpg">
     
     </div>
 
