--- a/_pages/quantum-detail.html
+++ b/_pages/quantum-detail.html
@@ -52,12 +52,13 @@ https://templatemo.com/tm-556-catalog-z
            
             </p>
             <p>
-<ul>
-  <li>Through such networks, a ‘quantum internet’ can be envisaged; with only moderate processing capabilities, 
-            such an internet could accomplish tasks that are impossible in the realm of classical physics, and,</li>
-  <li>Quantum networking is crucial even inside individual quantum computers, for the reliable transportation of quantum information between 
-            processing and memory modules.</li>
-</ul>
+
+  1) Through such networks, a ‘quantum internet’ can be envisaged; with only moderate processing capabilities, 
+            such an internet could accomplish tasks that are impossible in the realm of classical physics, and,
+                <br>
+  2) Quantum networking is crucial even inside individual quantum computers, for the reliable transportation of quantum information between 
+            processing and memory modules.
+
             </p>
         <p>
             The societal impacts of quantum networks are multiple; physics-based secure communications and data privacy, distributed quantum computing, improved sensing, blind quantum computing, secure private-bid auctions, counterfeit-proof currency, tamper-proof sensors and many others.
