--- a/_pages/sfgames-detail.html
+++ b/_pages/sfgames-detail.html
@@ -35,7 +35,7 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
-            <h2 class="col-12 tm-text-primary">Sectorized mmWave Networks</h2>
+            <h2 class="col-12 tm-text-primary">Satisfaction Form Games for Network Resource Allocation</h2>
         </div>
        
        
