--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -15,6 +15,22 @@ author_profile: true
 {% endfor %} -->
 
 <div>
+  
+ <b> Onassis Foundation Scholarship</b>  for graduate studies in Electrical Engineering (2023-2026).
+
+</div>
+<br>
+
+
+<div>
+
+ <b> NTUA Thomaidion Award</b> for the publication "Rethinking power control in wireless networks: the perspective of satisfaction equilibrium" (Nov. 2022).
+
+</div>
+<br>
+
+
+<div>
 
  <b> NTUA Thomaidion Award</b> for the publication "A paradigm shift toward satisfaction, realism and efficiency in wireless networks resource sharing," (May 2022).
 
