--- a/_pages/quantum-detail.html
+++ b/_pages/quantum-detail.html
@@ -35,7 +35,7 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
-            <h2 class="col-12 tm-text-primary">Quantum Networks for the Quantum Internet</h2>
+            <h2 class="col-12 tm-text-primary">Quantum Networks & Distributed Quantum Computing</h2>
         </div>
        
        
