--- a/_pages/quantum-detail.html
+++ b/_pages/quantum-detail.html
@@ -35,7 +35,7 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
-            <h2 class="col-12 tm-text-primary">Enhancing Quantum Network Capabilities through Advanced Entanglement Distribution</h2>
+            <h2 class="col-12 tm-text-primary">Optimizing and Modeling Quantum Entanglement Networks</h2>
         </div>
        
        
@@ -46,7 +46,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
 
 <div class="row mb-4">
-            <h2 class="col-12 tm-text-primary">Breaking New Ground in Distributed Quantum Computing through Resource Allocation Optimization</h2>
+            <h2 class="col-12 tm-text-primary">Advancing Distributed Quantum Computing Through Strategic Resource Allocation and Qubit Mapping</h2>
         </div>
 
         <div class="row mb-3 tm-gallery" style="margin-left:0.3cm;margin-right:0.3cm;">
