--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -87,7 +87,7 @@ In this thrust, we focus on the modeling, analysis, and optimization of sectoriz
            
 <div class="row mt-4 justify-content-center">
     <video width="720" controls>
-        <source src="gifs/sectorization_demo.mp4" type="video/mp4">
+        <source src="gifs/sectorization_demonstration.mp4" type="video/mp4">
         Sorry, your browser can't play this video.
     </video>
 </div>
