--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -61,11 +61,14 @@ In this thrust, we focus on the modeling, analysis, and optimization of sectoriz
 </p>
 
             <div class="row mt-4 justify-content-center">
-          <video width="720" controls>
+                     <video width="720" controls preload="none">
   <source src="../gifs/sectorization_demo.mp4" type="video/mp4">
   Sorry, your browser can't play this video.
 </video>
 </div>
+
+
+
 
 
             
