--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -61,10 +61,11 @@ In this thrust, we focus on the modeling, analysis, and optimization of sectoriz
 </p>
 
             <div class="row mt-4 justify-content-center">
-                     <video width="720" controls preload="none">
+                     <video width="720" controls preload="none" poster="../gifs/sectorization_demo_thumbnail.png">
   <source src="../gifs/sectorization_demo.mp4" type="video/mp4">
   Sorry, your browser can't play this video.
 </video>
+
 </div>
 
 
