--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-556-catalog-z
             </p>
 
             <br>
-            <h5>Publications</h5>
+            <h5>Indicative Publications</h5>
 
             <p>
             Promponas, P., Chen, T., & Tassiulas, L. Optimizing Sectorized Wireless Networks: Model, Analysis, and Algorithm. In 24th International Symposium on Theory, Algorithmic Foundations, and Protocol Design for Mobile Networks and Mobile Computing (MobiHoc '23)
