--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -40,7 +40,7 @@
             
 
             <br>
-            <h5>Indicative Publications</h5>
+            <h5>Selected Publications</h5>
             <p>
             Promponas, P., Chen, T., & Tassiulas, L. <em>Optimizing Sectorized Wireless Networks: Model, Analysis, and Algorithm</em>. In 24th International Symposium on Theory, Algorithmic Foundations, and Protocol Design for Mobile Networks and Mobile Computing (MobiHoc '23).
             </p>
