--- a/_pages/quantum-detail.html
+++ b/_pages/quantum-detail.html
@@ -67,7 +67,7 @@
             </p>
 
             <div class="d-flex justify-content-center my-4">
-                <img src="gifs/quantum-demo.gif" alt="Distributed Quantum Compiler Demo" class="img-fluid rounded" style="max-width: 100%; height: auto;">
+                <img src="../gifs/quantum-demo.gif" alt="Distributed Quantum Compiler Demo" class="img-fluid rounded" style="max-width: 100%; height: auto;">
             </div>
 
             <br>
