--- a/_pages/quantum-detail.html
+++ b/_pages/quantum-detail.html
@@ -38,7 +38,7 @@
             </p>
 
             <br>
-            <h5>Publications</h5>
+            <h5>Selected Publications</h5>
             <p>Valls, V., Promponas, P., & Tassiulas, L. <em>A Brief Introduction to Quantum Network Control.</em> IEEE Communications Magazine.</p>
             <p>Promponas, P., Valls, V., & Tassiulas, L. <em>Maximizing Entanglement Rates via Efficient Memory Management in Flexible Quantum Switches.</em> IEEE Journal on Selected Areas in Communications, Special Issue on “The Quantum Internet: principles, protocols, and architectures”.</p>
             <p>Valls, V., Promponas, P., & Tassiulas, L. <em>On the Capacity of the Quantum Switch with and without Entanglement Decoherence.</em> IEEE Communications Letters.</p>
@@ -71,7 +71,7 @@
             </div>
 
             <br>
-            <h5>Publications</h5>
+            <h5>Selected Publications</h5>
             <p>Promponas, P., Mudvari, A., Della Chiesa, L., Polakos, P., Samuel, L., & Tassiulas, L. <em>Compiler for Distributed Quantum Computing: a Reinforcement Learning Approach.</em> 2025 IEEE International Conference on Communications (ICC ‘25).</p>
         </div>
 
