--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sectorized mmWave Networks</title>
+    <title>Sectorized Directional Wireless Networks</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -26,7 +26,7 @@
 
         <div class="row mb-3 tm-gallery" style="margin-left:0.3cm; margin-right:0.3cm;">
             <p>
-            We explore how next-generation wireless systems can exploit <strong>sectorization</strong>&mdash;the ability of each infrastructure node to activate multiple directional antennas&mdash;to reshape the network and deliver fiber-like speeds in millimeter-wave (mmWave) backhaul settings. Our work begins by defining a comprehensive <strong>sectorized network model</strong> that captures how each node’s sectors interact to form multi-hop paths, and how interference is influenced by different sector configurations.
+            We explore how next-generation wireless systems can exploit <strong>sectorization</strong>&mdash;the ability of each infrastructure node to activate multiple directional antennas&mdash;to reshape the network and deliver fiber-like speeds. Our work begins by defining a comprehensive <strong>sectorized network model</strong> that captures how each node’s sectors interact to form multi-hop paths, and how interference is influenced by different sector configurations.
             </p>
 
             <p>
