--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -21,7 +21,7 @@
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
-            <h2 class="col-12 tm-text-primary">Sectorized mmWave Networks</h2>
+            <h2 class="col-12 tm-text-primary">Sectorized Directional Wireless Networks</h2>
         </div>
 
         <div class="row mb-3 tm-gallery" style="margin-left:0.3cm; margin-right:0.3cm;">
