--- a/_pages/mmwave-detail.html
+++ b/_pages/mmwave-detail.html
@@ -45,6 +45,12 @@
             Promponas, P., Chen, T., & Tassiulas, L. <em>Optimizing Sectorized Wireless Networks: Model, Analysis, and Algorithm</em>. In 24th International Symposium on Theory, Algorithmic Foundations, and Protocol Design for Mobile Networks and Mobile Computing (MobiHoc '23).
             </p>
 
+
+            <p>
+            Promponas, P., Chen, T., & Tassiulas, L. <em>On the Optimization and Stability of Sectorized Wireless Networks</em>. IEEE Transactions on Networking (2025).
+            </p>
+            
+
             <div class="row mt-4 justify-content-center">
                 <video width="720" controls preload="none" poster="../gifs/sectorization_demo_thumbnail.png">
                     <source src="../gifs/sectorization_demo.mp4" type="video/mp4">
