--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -14,6 +14,17 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %} -->
 
+
+
+
+<div>
+  
+ <b>Conference Travel Grants</b> for IEEE INFOCOM '23, IFIP Networking '23, IEEE ICC '25.
+
+</div>
+<br>
+
+
 <div>
   
  <b> Onassis Foundation Scholarship</b>  for graduate studies in Electrical Engineering (2023-2026).
