Update portfolio awards and scholarships
Removed outdated conference travel grant information and added new awards.

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -17,12 +17,6 @@ author_profile: true
 
 
 
-<div>
-  
- <b>Conference Travel Grants</b> for IEEE INFOCOM '23, IFIP Networking '23, IEEE ICC '25.
-
-</div>
-<br>
 
 
 <div>
@@ -33,7 +27,7 @@ author_profile: true
 <br>
 
 
-<div>
+<!-- <div>
 
  <b> NTUA Thomaidion Award</b> for the publication "Rethinking power control in wireless networks: the perspective of satisfaction equilibrium" (Nov. 2022).
 
@@ -46,7 +40,7 @@ author_profile: true
  <b> NTUA Thomaidion Award</b> for the publication "A paradigm shift toward satisfaction, realism and efficiency in wireless networks resource sharing," (May 2022).
 
 </div>
-<br>
+<br> -->
 <div>
   
 <b> A.G. Leventis Foundation Scholarship </b> for graduate studies in Electrical Engineering (2021-2023).
@@ -63,11 +57,11 @@ author_profile: true
 <b>Gerondelis Foundation Award</b> for Academic Excellence (2020-2021).
 </div>
 <br>
-
+<!-- 
 <div>
 <b>NTUA Thomaidion Award</b> for the publication "Redesigning Resource Management in Wireless Networks based on Games in Satisfaction Form," (Sept. 2021).
 </div>
-<br> 
+<br>  -->
 <div>
 <b>Special Account for Research Funding (E.L.K.E.) of NTUA Scholarship</b> for Academic Excellence (2019-2020).
 </div>
@@ -79,7 +73,15 @@ author_profile: true
 <div>
 <b>Best Paper Award</b> in the 12th IFIP Wireless and Mobile Networking Conference (WMNC '19) for the paper "Redesigning Resource Management in Wireless Networks based on Games in Satisfaction Form," (Sept. 2019).
 </div>
+<br>
 
+<div>
+<b>3x NTUA Thomaidion Awards</b> for three publications on satisfaction equilibria and wireless resource management (2019-2022). 
+</div>
+<br>
+<div>  
+<b>Conference Travel Grants</b> for IEEE INFOCOM '23, IFIP Networking '23, IEEE ICC '25.
+</div>
 
   
 
