Revise quantum-detail.html for content and structure
Updated the content and formatting of the quantum detail page.

--- a/_pages/quantum-detail.html
+++ b/_pages/quantum-detail.html
@@ -34,7 +34,7 @@
                 As we move from simple linear repeater chains to multi-user star and mesh topologies, the core challenge shifts from physical-layer noise management along a single path to network-layer <strong>scheduling, routing, and resource allocation</strong> across many competing user pairs. A quantum network receives requests for end-to-end entanglement between distant users while probabilistic link-level entanglement generation produces Bell pairs between neighbors that must be stored in noisy memories and consumed through entanglement swaps before decoherence destroys them.
             </p>
             <p>
-                My research develops analytical models and control algorithms for these quantum switches and entanglement networks. I study how to exploit limited, imperfect quantum memories to <strong>maximize entanglement rates under fidelity constraints</strong>, characterize the throughput and fidelity regions of quantum switches with and without decoherence, and design scheduling and routing policies that fully utilize scarce resources. These results provide design guidelines for future architectures and control planes in large-scale quantum networks.
+                My research develops analytical models and control algorithms for these quantum switches and entanglement networks. I study how to exploit limited, imperfect quantum memories to <strong>maximize entanglement rates under fidelity constraints</strong>, characterize the throughput and fidelity regions of quantum switches, and design scheduling and routing policies that fully utilize scarce resources. These results provide design guidelines for future architectures and control planes in large-scale or near-term quantum networks.
             </p>
         
             <br>
@@ -111,4 +111,5 @@
 
 </body>
 </html>
+
 
