Fix HTML formatting issues in quantum-detail page

--- a/_pages/quantum-detail.html
+++ b/_pages/quantum-detail.html
@@ -92,6 +92,10 @@
             <br>
             <h5>Selected Publications</h5>
             <p>Promponas, P., Mudvari, A., Della Chiesa, L., Polakos, P., Samuel, L., & Tassiulas, L. <em>Compiler for Distributed Quantum Computing: a Reinforcement Learning Approach.</em> 2025 IEEE International Conference on Communications (ICC ‘25).</p>
+
+            <p>Crampton, O., Promponas, P., Chen, R., Polakos, P., Tassiulas, L., & Samuel, L. (2024). <em>A Genetic Approach to Minimising Gate and Qubit Teleportations for Multi-Processor Quantum Circuit Distribution. arXiv preprint arXiv:2405.05875.</p>
+
+        
         </div>
 
         <p style="margin-bottom:3cm;"></p>
@@ -111,5 +115,6 @@
 
 </body>
 </html>
+
 
 
